# mac-rs

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs
